balance page width: max 100 chars per line, fix responsive footer on mobile

--- a/sass/_styles.scss
+++ b/sass/_styles.scss
@@ -72,6 +72,8 @@ a.brand img {
 /*  inset center area */
 .container-narrow {
     width: 60%;
+    // baseFont 15px 100 CPL
+    max-width: 661px;
     margin: 0 auto;
 }
 /* content area has margin */
@@ -169,17 +171,14 @@ blockquote p:after {
 }
 
 /* responsive */
-@media (max-width: 1150px) {
-    .navbar .container-narrow {
-        width: 80%;
-    }
-}
-@media (max-width: 920px) {
+@media (max-width: 780px) {
     body {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 0;
+        padding-right: 0;
     }
     .container-narrow {
+        padding-left: 10px;
+        padding-right: 10px;
         width: 100%;
         margin: 0;
     }
